devops/v1/kustomize/apps/nginx/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    app: nginx
    env: dev
    tier: frontend
---
